--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,10 @@ p {
 
 .flashcard1, .flashcard2, .flashcard3, .flashcard4, .flashcard5, .flashcard6, .flashcard7, .flashcard8, .flashcard9, .flashcard10, .flashcard11, .flashcard12, .flashcard13, .flashcard14, .flashcard15, .flashcard16, .flashcard17, .flashcard18 {
   background-color: white;
+  cursor: pointer;
   padding: 20px;
   border: 2px solid black;
-  margin: auto;
+  margin-top: 10px;
   border-radius: 10px;
   height: 125px;
 
@@ -98,4 +99,15 @@ p {
 
 #ReturnDef {
   display: none;
+}
+
+/* Footer
+========================*/
+
+#footer {
+  font-size: 16px;
+  margin-top: 20px;
+  padding: 10px;
+  font-weight: bold;
+  border-top: 2px solid white;
 }
